[project]
name = "weekly-thread-triage"
version = "0.1.0"
description = "Scan vault for open threads, classify with LLM, and act on captures and tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "local-first-common[anthropic]",
    "requests>=2.32.5",
    "toml>=0.10.2",
    "typer>=0.24.1",
]

[project.scripts]
thread-triage = "triage.logic:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triage"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv.sources]
local-first-common = {path = "../local-first-common", editable = true}

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
